--- a/_config.yml
+++ b/_config.yml
@@ -35,8 +35,6 @@ github:
 #twitter:
 #  username: twitter_username            # change to your twitter username
 
-LinkedIn:
-  username: yigit-yazici
 
 social:
   # Change to your full name.
@@ -46,7 +44,7 @@ social:
   links:
     # The first element serves as the copyright owner's link
     #- https://twitter.com/username      # change to your twitter homepage
-    - https://github.com/yiyaz       # change to your github homepage
+    #- https://github.com/yiyaz       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     - https://www.linkedin.com/in/yigit-yazici
