--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ url: ''
 github:
   username: yiyaz             # change to your github username
 
-#twitter:
-#  username: twitter_username            # change to your twitter username
+twitter:
+  username: twitter_username            # change to your twitter username
 
 
 social:
