--- a/_config.yml
+++ b/_config.yml
@@ -21,10 +21,9 @@ timezone: Europe/Berlin
 
 title: Yigit Yazici                          # the main title
 
-tagline: Data Scientist and Technology Enthusiast   # it will display as the sub-title
+tagline: Data Scientist   # it will display as the sub-title
 
 description: >-                        # used by seo meta and the atom feed
-  A minimal, responsive, and powerful Jekyll theme for presenting professional writing.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: ''
@@ -35,19 +34,18 @@ github:
 twitter:
   username: twitter_username            # change to your twitter username
 
-
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Yigit Yazici
-  email: example@domain.com             # change to your email address
+  email: yigit.yazici@domain.com             # change to your email address
   links:
     # The first element serves as the copyright owner's link
     #- https://twitter.com/username      # change to your twitter homepage
-    #- https://github.com/yiyaz       # change to your github homepage
+    #- https://github.com/username       # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    - https://www.linkedin.com/in/yigit-yazici
+     - https://www.linkedin.com/in/yigit-yazici
 
 google_site_verification:               # fill in to your verification string
 
@@ -72,7 +70,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode:   # [light|dark]
+theme_mode:   dark
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
